Fixes table of contents overlap mobile (needs testing)

--- a/include/booktem.css
+++ b/include/booktem.css
@@ -11,7 +11,7 @@
   #TOC, #quarto-sidebar .sidebar-menu-container ul.mt-1 {
     width: 49%;
     padding:0;
-    float: left;
+    float: none;
     display: inline-block;
     vertical-align: text-top;
   }
